added a new api endpoints

--- a/sidebar.html
+++ b/sidebar.html
@@ -25,6 +25,16 @@
     </a>
   </li>
   <li class="menu-item">
+    <a href="pending-uploads.html">
+      <i class="fa-solid fa-file-circle-check"></i><span class="item-text">Pending Uploads</span>
+    </a>
+  </li>
+  <li class="menu-item">
+    <a href="materials.html">
+      <i class="fa-solid fa-book"></i><span class="item-text">Materials</span>
+    </a>
+  </li>
+  <li class="menu-item">
     <a href="#">
       <i class="fa-solid fa-envelope"></i><span class="item-text">Messages</span>
     </a>
