--- a/pending-uploads.html
+++ b/pending-uploads.html
@@ -403,7 +403,7 @@
                     <h2>Pending Uploads</h2>
                 </div>
                 <div class="profile">
-                    <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=80" alt="Admin">
+                    <img src="logo.png" alt="Admin">
                     <span id="userEmail">Admin User</span>
                     <button onclick="logout()"
                         style="margin-left: 15px; padding: 8px 15px; background: #dc3545; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 14px;">
